--- a/src/index.css
+++ b/src/index.css
@@ -202,6 +202,11 @@ a {
   background-color: #ffffff;
   width: 2px;
   border-radius: 32px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  min-height: 100px;
 }
 
 .simplebar-track.simplebar-vertical {
